--- a/Project.toml
+++ b/Project.toml
@@ -3,14 +3,12 @@ uuid = "07029e18-8f70-11e9-35ce-2d4df590abdc"
 authors = ["Christoph Ortner <c.ortner@warwick.ac.uk>"]
 version = "0.1.0"
 
-[deps]
-SphericalHarmonics = "c489a379-e885-57ff-9236-bd896d33c250"
-
 [compat]
 julia = "1"
 
 [extras]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "BenchmarkTools"]
