--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
-name = "SHIPs"
-uuid = "07029e18-8f70-11e9-35ce-2d4df590abdc"
-version = "0.3.3"
+name = "PoSH"
+uuid = "6d8061eb-fedd-4e97-910f-b56e75c6ebb1"
+version = "0.4.0"
 
 [deps]
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
