--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 JuLIP = "0.8.7"
+NeighbourLists = "0.5.1"
 julia = "1"
 
 [extras]
