--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "PoSH"
 uuid = "6d8061eb-fedd-4e97-910f-b56e75c6ebb1"
-version = "0.5.0dev"
+version = "0.5.0-dev"
 
 [deps]
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
@@ -13,6 +13,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 
 [compat]
 JuLIP = "0.8.7"
