--- a/Project.toml
+++ b/Project.toml
@@ -23,10 +23,11 @@ julia = "1"
 [extras]
 ASE = "51974c44-a7ed-5088-b8be-3e78c8ba416c"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "PyCall", "BenchmarkTools", "ASE", "Random", "SymPy"]
+test = ["Test", "PyCall", "BenchmarkTools", "ASE", "Random", "SymPy", "ForwardDiff"]
