--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 
 [compat]
-JuLIP = "0.8.13"
+JuLIP = "0.8.13, 0.9"
 NeighbourLists = "0.5.1"
 julia = "1.3"
 
