--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "SHIPs"
 uuid = "07029e18-8f70-11e9-35ce-2d4df590abdc"
-version = "0.6.0-pre"
+version = "0.6.0"
 
 [deps]
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
@@ -17,9 +17,9 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-JuLIP = "0.9"
+JuLIP = "0.9.3"
 NeighbourLists = "0.5.1"
-julia = "1.3"
+julia = "1.4"
 
 [extras]
 ASE = "51974c44-a7ed-5088-b8be-3e78c8ba416c"
