loosin JuLIP compat

--- a/Project.toml
+++ b/Project.toml
@@ -24,17 +24,17 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 
 [compat]
-JuLIP = "0.10.1"
-NeighbourLists = "0.5.1"
+JuLIP = "0.10.1 - 0"
+NeighbourLists = "0.5.1 - 0"
 julia = "1.4"
 
 [extras]
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 
 [targets]
 test = ["Test", "PyCall", "SymPy", "ForwardDiff", "Pkg"]
