--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
-name = "ACE"
+name = "ACE1"
 uuid = "3e8ccfd2-c8b0-11ea-32f1-f3a5990fd77a"
-version = "0.8.10"
+version = "pre-0.8.11"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
@@ -38,4 +38,4 @@ SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "PyCall", "SymPy", "ForwardDiff", "Pkg"]
+test = ["Test", "PyCall", "SymPy", "Pkg"]
