--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "ACE1"
-uuid = "3e8ccfd2-c8b0-11ea-32f1-f3a5990fd77a"
-version = "pre-0.8.11"
+uuid = "e3f9bc04-086e-409a-ba78-e9769fe067bb"
+version = "0.9.0"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
