--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 JuLIP = "= 0.11.0, 0.11.3"
 NeighbourLists = "0.5.1 - 0"
 julia = "1.4, 1.6, 1.7"
+StaticArrays = "1.5"
 
 [extras]
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
