--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 [compat]
 Combinatorics = "1"
 ForwardDiff = "0.10"
-JuLIP = "= 0.11.0, 0.11.3"
+JuLIP = "0.11.3"
 NeighbourLists = "0.5.1 - 0"
 StaticArrays = "1.5"
 julia = "1.6, 1.7"
