--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ ForwardDiff = "0.10"
 JuLIP = "0.11.3"
 NeighbourLists = "0.5.1 - 0"
 StaticArrays = "1.5"
-julia = "1.6, 1.7"
+julia = "1.7"
 
 [extras]
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
