--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,7 @@
 name = "ACE1"
 uuid = "e3f9bc04-086e-409a-ba78-e9769fe067bb"
-version = "0.11.5"
+version = "v0.11.6-DEV"
+
 
 [deps]
 ACEbase = "14bae519-eb20-449c-a949-9c58ed33163e"
