--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "ACE1"
 uuid = "e3f9bc04-086e-409a-ba78-e9769fe067bb"
-version = "0.12.2"
+version = "0.12.3"
 
 [deps]
 ACEbase = "14bae519-eb20-449c-a949-9c58ed33163e"
@@ -26,7 +26,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 [compat]
 Combinatorics = "1"
 ForwardDiff = "0.10"
-Interpolations = "0.14.7"
+Interpolations = "0.14.7, 0.15"
 JuLIP = "0.14.5"
 NeighbourLists = "0.5.1 - 0"
 Roots = "2"
