--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Combinatorics = "1"
 ForwardDiff = "0.10"
 Interpolations = "0.14.7, 0.15"
-JuLIP = "0.14.5"
+JuLIP = "0.14.5, 0.15"
 NeighbourLists = "0.5.1 - 0"
 Roots = "2"
 StaticArrays = "1.5"
